# peinfo

./: .gitignore  CMakeLists.txt  README.md  example.cpp
src/: CMakeLists.txt  characteristics.h  constants.h  parser.h  pattern.h  pe_header.h  section_header.h  standard_fields.h  util.h  win_specific_fields.h
